Modul Simpelbi: Menambahkan konfigurasi user

--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
 		
 		<p>Halaman tidak ditemukan!</p>
 		
-		<a href="../" class="link_404">Indit ka Bumi</a>
+		<a href="../dashboard.html" class="link_404">Indit ka Bumi</a>
 	</div>
 		</div>
 		</div>
