--- a/404.html
+++ b/404.html
@@ -64,14 +64,13 @@
 		
 		<p>Halaman tidak ditemukan!</p>
 		
-		<a href="../dashboard.html" class="link_404">Indit ka Bumi</a>
+		<a href="#" id="404" class="link_404">Indit ka Bumi</a>
 	</div>
 		</div>
 		</div>
 		</div>
 	</div>
 </section>
-
 
 </body>
 </html>
