Modul Simpelbi: Mencoba Cek url user

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -70,7 +70,7 @@
       <nav class="navbar navbar-light">
          <div class="navbar-left">
             <div class="logo-area">
-               <a class="navbar-brand" href="index.html">
+               <a class="navbar-brand" href="../prodi/dashboard-prodi.html">
                   <img class="dark" src="../atis-assets/logo/ulbi/LOGO ULBI - WIDE DARK (3).png" alt="logo">
                   <img class="light" src="../atis-assets/logo/ulbi/LOGO ULBI - WIDE DARK (3).png" alt="logo">
                </a>
@@ -560,7 +560,7 @@
                            <li>
                               <ul>
                                  <li>
-                                    <a href="demo2.html" class="">
+                                    <a href="dashboard.html" class="">
                                        <span class="menu-text">Dashboard</span>
                                        <!-- <span class="badge badge-info-10 menuItem rounded-pill">1.1.2</span> -->
                                     </a>
@@ -1249,7 +1249,7 @@
                      </a>
                   </li>
                   <li class="">
-                     <a href="../index.html">
+                     <a href="../dashboard.html">
                         <span class="nav-icon uil uil-sign-out-alt"></span>
                         <span class="menu-text">Log Out</span>
                      </a>
