--- a/admins/dashboard-admins.html
+++ b/admins/dashboard-admins.html
@@ -71,7 +71,7 @@
       <nav class="navbar navbar-light">
          <div class="navbar-left">
             <div class="logo-area">
-               <a class="navbar-brand" href="index.html">
+               <a class="navbar-brand" href="dashboard.html">
                   <img class="dark" src="../img/logo-dark.png" alt="logo">
                   <img class="light" src="../img/logo-white.png" alt="logo">
                </a>
