--- a/files/untuk_auditor.html
+++ b/files/untuk_auditor.html
@@ -662,6 +662,47 @@
                               </div>
                            </div>
                         </div>
+
+                        <div class="modal fade new-member-update " id="new-member-update" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" data-bs-backdrop="static" aria-hidden="true">
+                           <div class="modal-dialog modal-dialog-centered">
+                              <div class="modal-content  radius-xl">
+                                 <div class="modal-header">
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah File Untuk Auditor</h6>
+                                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                       <img src="../img/svg/x.svg" alt="x" class="svg">
+                                    </button>
+                                 </div>
+                                 <div class="modal-body">
+                                    <div class="new-member-modal">
+                                       <form id="myForm" method="post">
+                                          <div class="form-group mb-20">
+                                             <label for="siklus">Siklus:</label>
+                                             <select id="siklus" class="form-control"  placeholder="Siklus">
+                                             </select>
+                                         </div>
+                                          <div class="form-group mb-20">
+                                             <Label for="judul">Judul File :</Label>
+                                             <input type="text" class="form-control" id="judul" placeholder="Judul File">
+
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label for="file">Masukkan file  :</Label>
+                                             <input type="file" class="form-control"id="file"  placeholder="Judul File">
+
+                                          </div>
+                                          <div class="button-group d-flex pt-25">
+
+                                             <button type="button" id="update" class="btn btn-primary btn-default btn-squared text-capitalize">Update data
+                                             </button>
+
+                                             <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
+                                          </div>
+                                       </form>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
                         <!-- Modal -->
                      </div>
                   </div>
