Modul Simpelbi: Modal edit Fileprodi

--- a/files/untuk_prodi.html
+++ b/files/untuk_prodi.html
@@ -670,7 +670,7 @@
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
-                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah Data File Untuk Fakultas Dan Prodi
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Update Data File Untuk Fakultas Dan Prodi
                                     </h6>
                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                        <img src="../img/svg/x.svg" alt="x" class="svg">
@@ -680,25 +680,25 @@
                                     <div class="new-member-modal">
                                        <form id="myForm">
                                           <div class="form-group mb-20">
-                                             <label for="siklus">Siklus:</label>
-                                             <select id="siklus" class="form-control" name="idSiklus" placeholder="Siklus">
+                                             <label for="siklus-update">Siklus:</label>
+                                             <select id="siklus-update" class="form-control" name="siklus-update" placeholder="Siklus">
                                              </select>
                                          </div>
                                           <div class="form-group mb-20">
                                              <Label>Judul File :</Label>
-                                             <input type="text" class="form-control" id="judul"placeholder="Judul File">
+                                             <input type="text" class="form-control" id="judul-update"placeholder="Judul File">
 
                                           </div>
                                           
                                           <div class="form-group mb-20">
                                              <Label>Masukkan File  :</Label>
-                                             <input type="file" class="form-control" id="file"placeholder="Judul File">
+                                             <input type="file" class="form-control" id="file-update"placeholder="Judul File">
 
                                           </div>
                                            
                                           <div class="button-group d-flex pt-25">
 
-                                             <button type="button" id="tambahDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Tambah Data
+                                             <button type="button" id="updateDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Update data
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">cancel</button>
