--- a/ami/ami.html
+++ b/ami/ami.html
@@ -634,7 +634,7 @@
                                  </div>
                                  <div class="modal-body">
                                     <div class="new-member-modal">
-                                       <form method="post" id="myForm">
+                                       <form method="POST">
                                           <div class="form-group mb-20">
                                              <div class="category-member">
                                                 <Label>Fakultas :</Label>
@@ -732,7 +732,7 @@
                                  <thead>
                                     <tr class="userDatatable-header">
                                        <th>
-                                          <span class="userDatatable-title">ID AMI</span>
+                                          <span class="userDatatable-title">Nomor</span>
                                        </th>
                                        <th>
                                           <span class="userDatatable-title">Fakultas</span>
