--- a/ami/ami.html
+++ b/ami/ami.html
@@ -937,6 +937,7 @@
    <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
    <!-- endinject-->
    <script src="ami.js" type="module"></script>
 </body>
