Modul Simpelbi: Update File untuk auditor

--- a/files/untuk_auditor.html
+++ b/files/untuk_auditor.html
@@ -663,11 +663,12 @@
                            </div>
                         </div>
 
+
                         <div class="modal fade new-member-update " id="new-member-update" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" data-bs-backdrop="static" aria-hidden="true">
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
-                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah File Untuk Auditor</h6>
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Update File Untuk Auditor</h6>
                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                        <img src="../img/svg/x.svg" alt="x" class="svg">
                                     </button>
@@ -677,22 +678,22 @@
                                        <form id="myForm" method="post">
                                           <div class="form-group mb-20">
                                              <label for="siklus">Siklus:</label>
-                                             <select id="siklus" class="form-control"  placeholder="Siklus">
+                                             <select id="siklus-update" class="form-control"  placeholder="Siklus">
                                              </select>
                                          </div>
                                           <div class="form-group mb-20">
                                              <Label for="judul">Judul File :</Label>
-                                             <input type="text" class="form-control" id="judul" placeholder="Judul File">
+                                             <input type="text" class="form-control" id="judul-update" placeholder="Judul File">
 
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label for="file">Masukkan file  :</Label>
-                                             <input type="file" class="form-control"id="file"  placeholder="Judul File">
+                                             <input type="file" class="form-control"id="file-update"  placeholder="Judul File">
 
                                           </div>
                                           <div class="button-group d-flex pt-25">
 
-                                             <button type="button" id="update" class="btn btn-primary btn-default btn-squared text-capitalize">Update data
+                                             <button type="button" id="updateDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Update Data
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
@@ -703,6 +704,7 @@
                               </div>
                            </div>
                         </div>
+                        
                         <!-- Modal -->
                      </div>
                   </div>
@@ -779,7 +781,7 @@
                <div class="row">
                   <div class="col-md-6">
                      <div class="footer-copyright">
-                        <p><span>© 2023</span><a href="#">Sovware</a>
+                        <p><span>© 2023</span><a href="#"></a>
                         </p>
                      </div>
                   </div>
