--- a/ami/standar.html
+++ b/ami/standar.html
@@ -625,6 +625,7 @@
                         <a href="#" class="btn px-15 btn-primary" data-bs-toggle="modal" data-bs-target="#new-member">
                            <i class="las la-plus fs-16"></i>Tambah Data Baru</a>
                         <!-- Modal -->
+                        <!-- Modal ADD -->
                         <div class="modal fade new-member " id="new-member" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
@@ -670,6 +671,62 @@
                                           <div class="button-group d-flex pt-25">
 
                                              <button type="button" class="btn btn-primary btn-default btn-squared text-capitalize" id="buttonadd">Simpan
+                                             </button>
+
+                                             <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
+                                          </div>
+                                       </form>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <!-- Modal UPDATE -->
+                        <div class="modal fade new-member-update " id="new-member-update" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                           <div class="modal-dialog modal-dialog-centered">
+                              <div class="modal-content  radius-xl">
+                                 <div class="modal-header">
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah Data Standar</h6>
+                                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                       <img src="../img/svg/x.svg" alt="x" class="svg">
+                                    </button>
+                                 </div>
+                                 <div class="modal-body">
+                                    <div class="new-member-modal">
+                                       <form method="POST">
+                                          <div class="form-group mb-20">
+                                             <Label>Standar :</Label>
+                                             <input type="text" class="form-control" placeholder="Nama Standar" id="standar-update">
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label>Untuk Pilihan :</Label>
+                                             <input type="text" class="form-control" placeholder="Text Singkat mewakili isi standar" id="utkpilihan-update">
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <label>Isi:</label>
+                                             <div class="note-toolbar ">
+                                                 <button class="note-toolbar-button" id="bold-button"><strong>B</strong></button>
+                                                 <button class="note-toolbar-button" id="italic-button"><em>I</em></button>
+                                                 <button class="note-toolbar-button" id="underline-button"><u>U</u></button>
+                                                 <button class="note-toolbar-button" id="url">URL</button>
+
+                                             </div>
+                                             <textarea type="text" class="form-control" placeholder="" id="isi-update"></textarea>
+                                         </div>
+
+                                         <div class="form-group mb-20">
+                                          <div class="category-member">
+                                             <Label>Siklus :</Label>
+
+                                             <select class="js-example-basic-single js-states form-control" id="siklus-update">
+                                                <option disabled value="JAN">--Pilih Siklus--</option>
+                                             </select>
+                                          </div>
+                                          </div>
+                                         
+                                          <div class="button-group d-flex pt-25">
+
+                                             <button type="button" class="btn btn-primary btn-default btn-squared text-capitalize" id="updateDataButton">Simpan
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
