Modul Simpelbi: post ami, post auditor

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -709,7 +709,7 @@
                   <div class="card mt-30">
                      <div class="card-body">
 
-                        <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 adv-table">
+                        <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 ">
                            <div class="table-responsive">
                               <div class="adv-table-table__header">
                                  <h4>Data Table</h4>
@@ -728,7 +728,7 @@
                                  </div>
                               </div>
                               <div id="filter-form-container"></div>
-                              <table class="table mb-0 table-borderless adv-table" data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
+                              <table class="table mb-0 table-borderless " data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
                                  <thead>
                                     <tr class="userDatatable-header">
                                        <th>
@@ -767,7 +767,7 @@
                                     </tr>
                                  </thead>
                                  <tbody id="content">
-                                    <tr>
+                                    <!-- <tr>
                                        <td>
                                           <div class="userDatatable-content">30</div>
                                        </td>
@@ -834,7 +834,7 @@
                                              </li>
                                           </ul>
                                        </td>
-                                    </tr>
+                                    </tr> -->
                                  </tbody>
                               </table>
                            </div>
