--- a/users/users-auditor.html
+++ b/users/users-auditor.html
@@ -636,7 +636,7 @@
                                        <form>
                                           <div class="form-group mb-20">
                                              <div class="category-member">
-                                                <Label>Fakultas :</Label>
+                                                <Label for="fakultas">Fakultas :</Label>
 
                                                 <select  id="fakultas" class="js-example-basic-single js-states form-control" >
                                                    <option disabled value="JAN">--Pilih Fakultas--</option>
@@ -654,7 +654,86 @@
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label>Nama Auditor :</Label>
-                                             <input type="text" class="form-control" placeholder="Nama Dekan Lengkap Gelar">
+                                             <input id="namaAuditor" type="text" class="form-control" placeholder="Nama Auditor">
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label>NIDN :</Label>
+                                             <input id="nidn"type="text" class="form-control" placeholder=" Nomor Induk Dosen Nasional">
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label>NIK / NIP :</Label>
+                                             <input id="nikNip" type="text" class="form-control" placeholder="NIK atau NIP">
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label>Telepon :</Label>
+                                             <input id="telepon" type="text" class="form-control" placeholder="Nomor Telpon">
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label>Email :</Label>
+                                             <input id="email" type="text" class="form-control" placeholder="Email Aktif">
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label>Foto :</Label>
+                                             <input id="fotoInput" type="file" class="form-control" placeholder="Email Aktif">
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <div class="category-member">
+                                                <Label>Siklus :</Label>
+
+                                                <select  id="idSiklus" class="js-example-basic-single js-states form-control" >
+                                                   <option disabled value="JAN">--Pilih Siklus--</option>
+                                                </select>
+                                             </div>
+                                          </div>
+                                          <div class="button-group d-flex pt-25">
+
+                                             <button type="button" id="tambahDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Tambah data
+                                             </button>
+
+                                             <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
+                                          </div>
+                                       </form>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <!-- Modal -->
+
+
+                        <div class="modal fade new-member " id="new-member" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                           <div class="modal-dialog modal-dialog-centered">
+                              <div class="modal-content  radius-xl">
+                                 <div class="modal-header">
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah Data Auditor</h6>
+                                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                       <img src="../img/svg/x.svg" alt="x" class="svg">
+                                    </button>
+                                 </div>
+                                 <div class="modal-body">
+                                    <div class="new-member-modal">
+                                       <form>
+                                          <div class="form-group mb-20">
+                                             <div class="category-member">
+                                                <Label for="fakultas">Fakultas :</Label>
+
+                                                <select  id="fakultas" class="js-example-basic-single js-states form-control" >
+                                                   <option disabled value="JAN">--Pilih Fakultas--</option>
+                                                </select>
+                                             </div>
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <div class="category-member">
+                                                <Label>Prodi :</Label>
+
+                                                <select  id="prodi" class="js-example-basic-single js-states form-control" >
+                                                   <option disabled value="JAN">--Pilih Prodi--</option>
+                                                </select>
+                                             </div>
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label>Nama Auditor :</Label>
+                                             <input id="namaAuditor" type="text" class="form-control" placeholder="Nama Auditor">
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label>NIDN :</Label>
@@ -662,20 +741,23 @@
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label>NIK / NIP :</Label>
-                                             <input type="text" class="form-control" placeholder="NIK atau NIP">
+                                             <input id="nikNip" type="text" class="form-control" placeholder="NIK atau NIP">
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label>Telepon :</Label>
-                                             <input type="text" class="form-control" placeholder="Nomor Telpon">
+                                             <input id="telepon" type="text" class="form-control" placeholder="Nomor Telpon">
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label>Email :</Label>
-                                             <input type="text" class="form-control" placeholder="Email Aktif">
+                                             <input id="email" type="text" class="form-control" placeholder="Email Aktif">
                                           </div>
-                                          
+                                          <div class="form-group mb-20">
+                                             <Label>Foto :</Label>
+                                             <input id="fotoInput" type="text" class="form-control" placeholder="Email Aktif">
+                                          </div>
                                           <div class="button-group d-flex pt-25">
 
-                                             <button class="btn btn-primary btn-default btn-squared text-capitalize">Tambah data
+                                             <button type="button" class="btn btn-primary btn-default btn-squared text-capitalize">Tambah data
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
