Modul Simpelbi: untuk user auditors post

--- a/users/users-auditor.html
+++ b/users/users-auditor.html
@@ -673,10 +673,11 @@
                                              <input id="email" type="text" class="form-control" placeholder="Email Aktif">
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label>Foto :</Label>
-                                             <input id="fotoInput" type="file" class="form-control" placeholder="Email Aktif">
-                                          </div>
-                                          <div class="form-group mb-20">
+                                             <label for="username">Username :</label>
+                                             <input id="username" type="text" class="form-control" placeholder="Username" />
+                                             <div id="username-suggestions" class="suggestions"></div>
+                                           </div>
+                                           <div class="form-group mb-20">
                                              <div class="category-member">
                                                 <Label>Siklus :</Label>
 
@@ -685,6 +686,11 @@
                                                 </select>
                                              </div>
                                           </div>
+                                          <div class="form-group mb-20">
+                                             <Label>Foto :</Label>
+                                             <input id="fotoInput" type="file" class="form-control" placeholder="Email Aktif">
+                                          </div>
+                                          
                                           <div class="button-group d-flex pt-25">
 
                                              <button type="button" id="tambahDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Tambah data
