Modul Simpelbi: Fix update dan post data auditor

--- a/users/users-auditor.html
+++ b/users/users-auditor.html
@@ -777,7 +777,7 @@
                                           
                                           <div class="button-group d-flex pt-25">
 
-                                             <button type="button" id="updateDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Tambah data
+                                             <button type="button" id="updateDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Update data auditor
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
