--- a/users/users-fakultas.html
+++ b/users/users-fakultas.html
@@ -684,7 +684,7 @@
                                           <div class="button-group d-flex pt-25">
 
                                              <button
-                                             id="tambahDataButton"
+                                             id="tambahDatafakultasButton"
                                              class="btn btn-primary btn-default btn-squared text-capitalize">
                                              Tambah Data
                                            </button>
@@ -741,13 +741,13 @@
                                           <div class="form-group mb-20">
                                              <label for="username">Username :</label>
                                              <input
-                                               id="username"
+                                               id="username-update"
                                                type="text"
                                                class="form-control"
                                                placeholder="Username"
                                              />
                                              <div
-                                               id="username-suggestions"
+                                               id="username-suggestions-update"
                                                class="suggestions"
                                              ></div>
                                            </div>
@@ -758,7 +758,7 @@
                                           <div class="button-group d-flex pt-25">
 
                                              <button
-                                             id="updateButton"
+                                             id="updateDataButton"
                                              class="btn btn-primary btn-default btn-squared text-capitalize">
                                              update Data
                                            </button>
@@ -888,7 +888,7 @@
    </div>
    <div class="overlay-dark-sidebar"></div>
    <div class="customizer-overlay"></div>
-   <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBgYKHZB_QKKLWfIRaYPCadza3nhTAbv7c"></script>
+   <!-- <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBgYKHZB_QKKLWfIRaYPCadza3nhTAbv7c"></script> -->
    <!-- inject:js-->
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -938,7 +938,7 @@
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
    <script src="./users-fakultas.js" type="module"></script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
 
    <!-- endinject-->
 </body>
