Modul Simpelbi : Coba Get AMI baru

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -709,10 +709,10 @@
                   <div class="card mt-30">
                      <div class="card-body">
 
-                        <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 ">
+                        <div class="userDatatable table global-shadow border-light-0 w-100">
                            <div class="table-responsive">
                               <div class="adv-table-table__header">
-                                 <h4>Data Table</h4>
+                                 <h4>Data Siklus</h4>
                                  <div class="adv-table-table__button">
                                     <div class="dropdown">
                                        <a class="btn btn-primary dropdown-toggle dm-select" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -766,76 +766,8 @@
                                        </th>
                                     </tr>
                                  </thead>
-                                 <tbody id="content">
-                                    <!-- <tr>
-                                       <td>
-                                          <div class="userDatatable-content">30</div>
-                                       </td>
-                                       <td>
-                                          <div class="d-flex">
-                                             <div class="userDatatable-inline-title">
-                                                <a href="#" class="text-dark fw-500">
-                                                   <h6>Kapil Deb</h6>
-                                                </a>
-                                             </div>
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content">
-                                             India
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content">
-                                             Business Development
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content">
-                                             Manager
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content">
-                                             March 31, 2021
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content">
-                                             March 31, 2021
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content">
-                                             March 31, 2021
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content">
-                                             March 31, 2021
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <ul class="orderDatatable_actions mb-0 d-flex flex-wrap">
-                                             <li>
-                                                <a href="#" class="view">
-                                                   <i class="uil uil-eye"></i>
-                                                </a>
-                                             </li>
-                                             <li>
-                                                <a href="#" class="edit">
-                                                   <i class="uil uil-edit"></i>
-                                                </a>
-                                             </li>
-                                             <li>
-                                                <a href="#" class="remove">
-                                                   <i class="uil uil-trash-alt"></i>
-                                                </a>
-                                             </li>
-                                          </ul>
-                                       </td>
-                                    </tr> -->
-                                 </tbody>
+                                 <tbody id="content"></tbody>
+                                 
                               </table>
                            </div>
                         </div>
